[package]
name = "template-rust"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2021"
name = "app"
path = "src/main.rs"

[dependencies]
lenra-app = { git = "https://github.com/lenra-io/app-lib-rust.git", branch = "fix-from-value" }
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
